# ggdraft

./: Cargo.toml
src/: color.rs  engine.rs  main.rs  universe_ref.rs  window.rs
src/app/: app_event.rs  app_prelude.rs  async_data.rs  data.rs  mod.rs
src/app/game/: chunk.rs  mod.rs  tile.rs  world.rs  world_generator.rs
src/class/: mesh_renderer.rs  mod.rs  render_instance.rs
src/geometry/: alignment.rs  mod.rs  orientation.rs  shape.rs  text.rs
src/gfx/: buffer.rs  gfx_cache.rs  input_layout.rs  input_parameters.rs  mesh.rs  mod.rs  program.rs  render_camera.rs  render_parameters.rs  shader.rs  target_buffer.rs  texture.rs  vertex_layout.rs  vertex_list.rs
src/gfx/shader_gen/: mod.rs  prelude.rs  shader_expression.rs  shader_inputs.rs  shader_outputs.rs  shader_parameters.rs  shader_type.rs
src/node_class/: mesh_renderer.rs  mod.rs  render_instance.rs  viewport.rs
src/node_component/: mod.rs  render_component.rs
