[package]
name = "ob_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
ggmath = { path = "../ggmath" }
ggutil = { path = "../ggutil" }
multiverse-ecs = { path = "../multiverse-ecs" }
app-weaver = { path = "../app-weaver" }
glfw = "0.58.0"
gl = "0.14.0"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
image = "0.25.4"